--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,35 +9,34 @@ name: Gradle Package
 
 on:
   release:
-    types: [created]
+    types:
+      - created
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '8' # use the lowest version from https://en.wikipedia.org/wiki/Java_version_history#Release_table
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@fec4a42eb0c83154e5c9590748ba8337949c5701
+    - name: Build the project
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: build
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
     - name: Publish to GitHub Packages
-      uses: gradle/gradle-build-action@fec4a42eb0c83154e5c9590748ba8337949c5701
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: publish
       env:
