--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
       with:
         java-version: ${{ matrix.java-versions }}
         distribution: 'temurin'
+        cache: 'gradle'
 
     - name: Build & Test
       uses: gradle/gradle-build-action@v3
